# blinkathon-2024

./: .gitignore  Cargo.toml  Znap.toml  actions.json  package.json  tsconfig.json
collections/create-squads-multisig/: Cargo.toml
collections/create-squads-multisig/src/: errors.rs  lib.rs  structs.rs
collections/kmno-staking/: Cargo.toml
collections/kmno-staking/src/: errors.rs  instructions.rs  lib.rs
collections/pay-with-send-token/: Cargo.toml
collections/pay-with-send-token/src/: errors.rs  field_pubkey.rs  jupiter_api.rs  lib.rs
collections/payments/: Cargo.toml
collections/payments/src/: field_instruction.rs  helius_api.rs  jupiter_api.rs  lib.rs  utils.rs
tests/: e2e.ts  utils.ts
