[package]
name = "pay-with-send-token"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
base64 = "0.22.1"
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.209"
serde_json = "1.0.127"
solana-client = "2.0.7"
solana-sdk = "2.0.7"
spl-associated-token-account = "5.0.0"
spl-token = "6.0.0"
znap = "0.1.36"
